tests/snapshots/integration__integration_tests__switch__switch_create_existing_error.snap
---
source: tests/integration_tests/switch.rs
info:
  program: arbor
  args:
    - switch
    - "--create"
    - feature-y
  env:
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Git command failed: Branch 'feature-y' already exists. Remove --create flag to switch to it.
