tests/snapshots/integration__integration_tests__switch__switch_error_missing_directory.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - missing-wt
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: false
exit_code: 1
----- stdout -----
❌ [31mWorktree directory missing for [1m[31mmissing-wt[0m[0m

💡 [2mRun 'git worktree prune' to clean up[0m

----- stderr -----
